# rts-ai-platform

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  RTS_Agent_Architecture_Deck.html  pyproject.toml
.claude/: settings.json
.claude/agents/: godot-gdextension-specialist.md  godot-gdscript-specialist.md  godot-shader-specialist.md  godot-specialist.md  rts-ai-engineer.md  rts-balance-analyst.md  rts-creative-director.md  rts-data-engineer.md  rts-design-assistant.md  rts-devops.md  rts-producer.md  rts-replay-analyzer.md  rts-simcore-engineer.md  rts-systems-designer.md  rts-technical-director.md  rts-test-orchestrator.md
.claude/docs/: coding-standards.md  coordination-rules.md  (+1 more)
agents/: __init__.py  combat.py  coordinator.py  economy.py  game_loop.py  protoss_ai.py  race_ai_base.py  react_adapter.py  script_ai.py  sub_agents.py  terran_ai.py  zerg_ai.py
agentscope_compat/: __init__.py  _agent_base.py  _msg.py  _msghub.py
data/: combat.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  RTS_Agent_Architecture_Deck.html  SC1_Godot_Replication_Plan.md  godot_rts_entity_controller_analysis.md
godot/: .gdignore  project.godot
harness/: __init__.py  benchmark.py  pool.py  telemetry.py
proto/: cmd.proto  obs.proto  service.proto  state.proto
scripts/: lint_deps.py  lint_quality.py  smoke_mvp.py  test_e2e_godot_flows.py  verify_frontend.py
simcore/: __init__.py  __main__.py  commands.py  construction.py  economy.py  engine.py  entities.py  grpc_client.py  grpc_server.py  gym_env.py  http_gateway.py  map.py  mapgen.py  movement.py  pathfinder.py  projectile.py  replay.py  rules.py  spells.py  state.py  upgrades.py
tests/: conftest.py
train/: __init__.py  dashboard.py  grpo_trainer.py
(+174 files in other folders)
